postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres # any data stored is going to be inside subPath (postgres) in the persistent volume claim
              #if not specified, postgres will know that this is a mounted volume, and wont save data inside it.
          ports:
            - containerPort: 5432
      volumes:
        - name: postgres-storage
           persistentVolumeClaim:
            claimName: database-persistent-volume-claim
